Fix social SVG display on Safari

--- a/src/assets/css/components/_social.scss
+++ b/src/assets/css/components/_social.scss
@@ -24,6 +24,7 @@
     margin: 0 auto;
     max-width: 40%;
     max-height: 40%;
+    width: 40%;
     fill: currentColor;
   }
 
